2021/manifests/changelog/db.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
