2021/manifests/changelog/app-k3s.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: ${NAMESPACE}
  labels:
    app: app
    # https://keel.sh/docs/#policies
    keel.sh/policy: force
    keel.sh/match-tag: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - app
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: db-backup
          image: thechangelog/backups:202104
          imagePullPolicy: Always
          # command: ["/usr/local/bin/backup_db_continuously"]
          command: ["sleep", "infinity"]
        - name: uploads-backup
          image: thechangelog/backups:202104
          imagePullPolicy: Always
          # command: ["/usr/local/bin/backup_uploads_continuously"]
          command: ["sleep", "infinity"]
          volumeMounts:
            - mountPath: "/uploads"
              name: uploads
        - name: app
          image: thechangelog/changelog.com:latest
          imagePullPolicy: Always
          # command:
          #   - iex
          #   - --sname
          #   - debug
          #   - -S
          #   - mix
          #   - phx.server
          ports:
            - name: phoenix
              containerPort: 4000
          resources:
            requests:
              cpu: "2"
              memory: "2Gi"
            limits:
              memory: "8Gi"
          readinessProbe:
            httpGet:
              path: /health
              port: phoenix
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            periodSeconds: 15
            timeoutSeconds: 14
          startupProbe:
            httpGet:
              path: /health
              port: phoenix
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/app/priv/uploads"
              name: uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads
