2021/manifests/changelog/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: ${NAMESPACE}
  labels:
    app: app
    # https://keel.sh/docs/#policies
    keel.sh/policy: force
    keel.sh/match-tag: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        # Required by grafana-agent: https://github.com/grafana/agent/issues/339#issue-789433621
        name: app
      annotations:
        prometheus.io/port: "4000"
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - app
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: app
          image: thechangelog/changelog.com:master
          imagePullPolicy: Always
          # command:
          #   - iex
          #   - --sname
          #   - debug
          #   - -S
          #   - mix
          #   - phx.server
          # command: ["sleep", "infinity"]
          ports:
            - name: phoenix
              containerPort: 4000
          resources:
            requests:
              cpu: 8
              memory: 8Gi
            limits:
              cpu: 8
              memory: 8Gi
          readinessProbe:
            httpGet:
              path: /health
              port: phoenix
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            periodSeconds: 15
            timeoutSeconds: 14
          startupProbe:
            httpGet:
              path: /health
              port: phoenix
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/app/priv/uploads"
              name: uploads-local-ssd
      volumes:
        - name: uploads-local-ssd
          persistentVolumeClaim:
            claimName: uploads-local-ssd
---
apiVersion: v1
kind: Pod
metadata:
  name: restore-db
  namespace: ${NAMESPACE}
spec:
  containers:
    - name: db
      image: thechangelog/backups:202104
      imagePullPolicy: Always
      command: ["sleep", "infinity"]
