2021/manifests/changelog/lb-k3s.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: cert-manager-webhook-dnsimple-production
    external-dns.alpha.kubernetes.io/ttl: "600"
spec:
  tls:
    - hosts:
        - 21-k3s.changelog.com
      secretName: wildcard-acme-tls
    # - hosts:
    #     - brainscience.fm
    #   secretName: brainscience-fm-acme-tls
    # - hosts:
    #     - changelog.fm
    #   secretName: changelog-fm-acme-tls
    # - hosts:
    #     - founderstalk.fm
    #   secretName: founderstalk-fm-acme-tls
    # - hosts:
    #     - gotime.fm
    #   secretName: gotime-fm-acme-tls
    # - hosts:
    #     - jsparty.fm
    #   secretName: jsparty-fm-acme-tls
    # - hosts:
    #     - practicalai.fm
    #   secretName: practicalai-fm-acme-tls
  rules:
    - host: 21-k3s.changelog.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app
                port:
                  number: 4000
    # - host: brainscience.fm
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: app
    #           servicePort: 4000
    # - host: changelog.fm
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: app
    #           servicePort: 4000
    # - host: founderstalk.fm
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: app
    #           servicePort: 4000
    # - host: gotime.fm
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: app
    #           servicePort: 4000
    # - host: jsparty.fm
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: app
    #           servicePort: 4000
    # - host: practicalai.fm
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: app
    #           servicePort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: ${NAMESPACE}
  labels:
    app: app
spec:
  ports:
    - name: http
      port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: app
